ref : 로직 수정 및 통계 도메인 재설계 문서 작업